Release history for Dist-Zilla-Role-Version-Sanitize

{{$NEXT}}

0.002002 2016-06-06T22:54:09Z a3dac06
 - Add VERSION to metaconfig.

 [Dependencies::Stats]
 - Dependencies changed since 0.002001, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +16 ↑3 -3 (recommends: +1, suggests: ↑2)
 - runtime: ↓1 -1
 - test: +1 (recommends: +1 ↑1 ↓1)

0.002001 2014-08-15T21:42:46Z
 [00 Trivial]
 - CPANDAY!
 - no code changes.
 - metadata updated.
 - tests augmented.

 [Dependencies::Stats]
 - Dependencies changed since 0.002000, see misc/*.deps* for details
 - configure: ↓1
 - develop: +2 (suggests: ↑1)
 - test: +1 -2 (recommends: ↑1 -1)

 [Metadata]
 - Moved to kentnl org.

 [Tests]
 - Test::ReportPrereqs updated.

0.002000 2014-07-13T21:03:31Z
 [00 Major]
 - Some changes in packaging that might break downstreams that work by hand.
 - Misc other packaging cleanups

 [01 Tooling]
 - Switched to ExtUtils::MakeMaker ( https://questhub.io/realm/perl/quest/5388cc12bbd0be5b2500011f )
 - Toolchain Dependencies softened to recommendations instead of requirements

 [Dependencies::Stats]
 - Dependencies changed since 0.001002, see misc/*.deps* for details
 - build: -1
 - configure: +1 -1 (recommends: +1)
 - develop: +6 -8 (suggests: +2 -1)
 - runtime: +1 ↑1
 - test: +3 ↓1 (recommends: +4)

0.001002 2013-12-10T01:20:15Z
 - Only debug message about normalisation when normalisation is applied

0.001001 2013-12-01T19:26:20Z
 - Document attributes.

 [Dependencies::Stats]
 - Dependencies changed since 0.001000, see misc/*.deps* for details
 - develop: +1 ↑1 -1

0.001000 2013-12-01T10:03:15Z
 - First version.