@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.047.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.008.
 use strict;
 use warnings;
 
@@ -33,7 +33,7 @@ my %WriteMakefileArgs = (
     "Path::Tiny" => 0,
     "Test::DZil" => 0,
     "Test::Fatal" => 0,
-    "Test::More" => "0.89"
+    "Test::More" => 0
   },
   "VERSION" => "0.002003",
   "test" => {
@@ -54,7 +54,7 @@ my %FallbackPrereqs = (
   "Path::Tiny" => 0,
   "Test::DZil" => 0,
   "Test::Fatal" => 0,
-  "Test::More" => "0.89",
+  "Test::More" => 0,
   "strict" => 0,
   "version" => 0,
   "warnings" => 0
