@@ -18,6 +18,8 @@ toolkit          = eumm
 toolkit_hardness = soft
 twitter_extra_hash_tags = #distzilla
 srcreadme         = mkdn
+Test::Compile::PerFile.:version = 0.003902
+Test::Compile::PerFile.test_template = 02-raw-require.t.tpl
 
 ; version_major     = 0
 ; version_minor     = 1
