@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.002003
+ [Changed / test requires]
+ - Test::More 0.89 → 0
 
 0.002002 2016-06-06T22:54:09Z
  [Added / configure requires]
