@@ -1,6 +1,14 @@
 Release history for Dist-Zilla-Role-Version-Sanitize
 
 {{$NEXT}}
+ [Bugfix]
+ - Avoid test failures on 5.26 w/ -Ddefault_inc_excludes_dot
+ - Closes https://github.com/kentnl/Dist-Zilla-Role-Version-Sanitize/issues/2
+
+ [Dependencies::Stats]
+ - Dependencies changed since 0.002002, see misc/*.deps* for details
+ - develop: +1 ↑1 (suggests: ↑1)
+ - test: ↓1
 
 0.002002 2016-06-06T22:54:09Z a3dac06
  - Add VERSION to metaconfig.
